<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> Penguins </string>

    <string name="submit_to"> Submitted To </string>
    <string name="prof_name"> Mr David Gillibrand </string>
    <string name="prof_email"> d.gillibrand@staffs.ac.uk </string>

    <string name="blank"></string>
    <string name="save"> Save </string>
    <string name="hint_name"> Name </string>

    <string name="credits"> Credits </string>
    <string name="errorTitle">Contact Name is Required</string>
    <string name="errorMessage">You must enter a contact name</string>
    <string name="errorButton">OK</string>

    <string name="developed_by"> Developed By </string>
    <string name="my_name"> Kalive Purushotham Kumar </string>
    <string name="my_email"> k027913e@student.staffs.ac.uk </string>

    <string name="play"> Play </string>
    <string name="sound"> Sound </string>
    <string name="high_score"> Highest Score </string>
    <string name="options"> Options </string>

    <string name="identify">Identify Penguin ?</string>
    <string name="score">Score: </string>

    <string name="submit"> Submit </string>
    <string name="hint"> Hint </string>

    <string name="adelie_hint">Named after Adélie Land</string>
    <string name="african_hint">Known as Jackass Penguin</string>
    <string name="blue_hint">Smallest Species of penguin</string>
    <string name="action_settings">Settings</string>

    <string name="adelie"> Adelie </string>
    <string name="african"> African </string>
    <string name="blue"> Blue </string>
    <string name="emperor"> Emperor </string>
    <string name="erectcrested"> Erectcrested </string>
    <string name="galapogos"> Galapogos </string>
    <string name="gentoo"> Gentoo </string>
    <string name="humbolt"> Humbolt </string>
    <string name="king"> King </string>
    <string name="macoroni"> Macoroni </string>
    <string name="rockhopper"> Rockhopper </string>
    <string name="royal"> Royal </string>
    <string name="yelloweyed"> Yelloweyed </string>


</resources>
