<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f5f5f5" >

      <TextView
        android:id="@+id/txt17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="05dp"
        android:text="@string/identify" />
<Button
       android:id="@+id/button1"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/rg9"
       android:layout_toRightOf="@+id/txt17"
       android:layout_toEndOf="@+id/txt17"
       android:text="@string/hint" />
    <TextView
        android:id="@+id/txt18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <ImageView
        android:id="@+id/king"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/blank"
        android:src="@drawable/king" />
    
    <RadioGroup
        android:id="@+id/rg9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/king" >
    <RadioButton
        android:id="@+id/erectcrestedbutton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/erectcrested" />
    
    <RadioButton
        android:id="@+id/kingbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/king" />
    
    <RadioButton
        android:id="@+id/humboltbutton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humbolt" />
    </RadioGroup>
    </RelativeLayout>