<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f5f5f5" >

   <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="05dp"
        android:text="@string/identify" />
   
   <Button
       android:id="@+id/button2"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/rg2"
       android:layout_toRightOf="@+id/txt3"
       android:layout_toEndOf="@+id/txt3"
       android:text="@string/hint" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <ImageView
        android:id="@+id/african"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt3"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/blank"
        android:src="@drawable/african" />
    
   <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/african" >
        
    <RadioButton
        android:id="@+id/yelloweyedbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="17dp"
        android:text="@string/yelloweyed" />
    
    <RadioButton
        android:id="@+id/africanbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/african" />
    
    <RadioButton
        android:id="@+id/macoronibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="@string/macoroni" />
    </RadioGroup>
    </RelativeLayout>
    
    