<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f5f5f5" >

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"        
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/adelie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/blank"
        android:src="@drawable/adelie" />
   
   <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adelie" >
        
    <RadioButton
        android:id="@+id/adeliebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="17dp"
        android:text="@string/adelie" />
    
    <RadioButton
        android:id="@+id/africanbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="@string/african" />
    
    <RadioButton
        android:id="@+id/bluebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="@string/blue" />
    
    </RadioGroup>

   <TextView
       android:id="@+id/txt1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txt2"
       android:layout_centerHorizontal="true"
       android:text="@string/identify" />

   <Button
       android:id="@+id/button1"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/rg1"
       android:layout_toRightOf="@+id/txt1"
       android:layout_toEndOf="@+id/txt1"
       android:text="@string/hint" />



    </RelativeLayout>
    
    