<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kumar.penguingame.StartActivity" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/blank"        
        android:src="@drawable/uni_logo" />

    <TextView
        android:id="@+id/submit_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:text="@string/submit_to" />

    <TextView
        android:id="@+id/prof_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/submit_to"
        android:text="@string/prof_name" />
    
    <TextView
        android:id="@+id/prof_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/prof_name"
        android:text="@string/prof_email" />
    
    <TextView
        android:id="@+id/blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prof_email"
        android:layout_centerHorizontal="true"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blank"
        android:layout_centerHorizontal="true"
        android:text="@string/developed_by" />
    
     <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developed_by"
        android:layout_centerHorizontal="true"
        android:text="@string/my_name" />
     
      <TextView
        android:id="@+id/my_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_name"
        android:layout_centerHorizontal="true"
        android:text="@string/my_email" />

    <ProgressBar
        android:id="@+id/progress_Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true" />   

</RelativeLayout>
